--- a/package.json
+++ b/package.json
@@ -2,10 +2,30 @@
   "name": "piano-player",
   "version": "1.0.0",
   "description": "Play a Virtual Piano",
-  "main": "main.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "make": "tsc",
+    "start": "npm run-script make && node dist/main.js",
+    "test": "./node_modules/.bin/mocha --require ts-node/register test/**/*test.ts"
   },
   "author": "Jain Waldrip",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "bluebird": "^3.5.2",
+    "js-yaml": "^3.12.0",
+    "puppeteer": "^1.8.0",
+    "typescript": "^3.0.3"
+  },
+  "devDependencies": {
+    "@types/bluebird": "^3.5.24",
+    "@types/chai": "^4.1.5",
+    "@types/chai-as-promised": "^7.1.0",
+    "@types/mocha": "^5.2.5",
+    "@types/puppeteer": "^1.6.4",
+    "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
+    "mocha": "^5.2.0",
+    "ts-node": "^7.0.1",
+    "tslint": "^5.11.0"
+  }
 }
