--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "make": "tsc",
-    "start": "npm run-script make && node dist/main.js",
+    "start": "npm run-script make && node dist/app.js",
     "test": "./node_modules/.bin/mocha --require ts-node/register test/**/*test.ts"
   },
   "author": "Jain Waldrip",
